Fix footer and logo svg on mobile

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css?family=Asap");
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
 @import url("https://fonts.googleapis.com/css?family=Coustard&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@800&display=swap");
 :root {
   --msg-code-copied: "CODE COPIED!";
   --url-img-service: "https://unsplash.it/1920"; }
@@ -54,7 +55,8 @@ code {
   --ff-body: "Fira Sans", sans-serif;
   --ff-side: "Asap", sans-serif;
   --ff-notes: "Oxygen", sans-serif;
-  --ff-code: "Inconsolata", monospace; }
+  --ff-code: "Inconsolata", monospace;
+  --ff-logo: "Nunito Sans ExtraBold"; }
 
 .burger--init {
   cursor: default;
@@ -694,7 +696,7 @@ footer {
     position: relative;
     flex-direction: column-reverse;
     justify-content: center;
-    bottom: -7em;
+    bottom: -6em;
     padding: 0;
     margin: 0 auto; }
     @media (min-width: 1300px) {
