--- a/src/styles/sass/base/_typography.scss
+++ b/src/styles/sass/base/_typography.scss
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css?family=Asap");
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
 @import url("https://fonts.googleapis.com/css?family=Coustard&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@800&display=swap");
 
 :root {
     --ff-pablomag: "Coustard", sans-serif;
@@ -14,6 +15,7 @@
     --ff-side: "Asap", sans-serif;
     --ff-notes: "Oxygen", sans-serif;
     --ff-code: "Inconsolata", monospace;
+    --ff-logo: "Nunito Sans ExtraBold";
 }
 
 $fs-xxs: 0.7rem;
