--- a/src/styles/sass/layout/_footer.scss
+++ b/src/styles/sass/layout/_footer.scss
@@ -16,7 +16,7 @@ footer {
         position: relative;
         flex-direction: column-reverse;
         justify-content: center;
-        bottom: -7em;
+        bottom: -6em;
         padding: 0;
         margin: 0 auto;
 
